# BDSP

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  keywords.txt  library.json  library.properties  platformio.ini  release_notes.md
cmake/: BDSP-config.cmake.in  utils.cmake
docs/: coverage.md
docs/attachments/: BDSP Protocol.xlsx
examples/Desktop/: CMakeLists.txt  _COBS.cpp  _PPP.cpp  main.cpp  ppp.cpp  utils.cpp  utils.h
examples/Desktop/src/: BDSP_EXAMPLE.cpp  CMakeLists.txt  COBS_EXAMPLE.cpp  COBS_GSE_EXAMPLE.cpp  COBS_RS_EXAMPLE.cpp  COBS_SR_EXAMPLE.cpp  COBS_ZPE_EXAMPLE.cpp  PPP_EXAMPLE.cpp  REDUNDANCY_TESTER.cpp  utils.cpp  utils.h
examples/PlatformIO/: main.cpp  performance_tester.cpp
include/BDSP/: BDSP.h  bdsp_mixins.h  bdsp_receiver.h  bdsp_transceiver.h  bdsp_transmitter.h  bdsp_types.h  export.h  mixins.h  packet.h  receiver.h  transceiver.h  transmitter.h  types.h
include/BDSP/checksums/: crc8.h
include/BDSP/checksums/crc/: crc8.h
include/BDSP/decoders/: COBS.h  PPP.h  abs_decoder.h  interface.h  types.h
include/BDSP/encoders/: COBS.h  PPP.h  abs_encoder.h  interface.h  types.h
include/BDSP/encoders/cobs/: cobs.h  decoder.h  encoder.h
include/BDSP/strategies/: types.h
include/BDSP/strategies/abstract/: read.h  write.h
include/BDSP/strategies/byte_stuffing/: mixins.h  read.h  types.h  write.h
include/BDSP/strategies/cobs/: mixins.h  read.h  types.h  write.h
include/BDSP/streams/: mixins.h  reader.h  types.h  writer.h
include/BDSP/streams/COBS/: checkers.h  decoder.h  encoder.h  mixins.h  reader.h  types.h  writer.h
include/BDSP/streams/PPP/: checkers.h  decoder.h  encoder.h  mixins.h  reader.h  types.h  writer.h
include/BDSP/streams/abstract/: decoder.h  encoder.h  mixins.h  reader.h  stream.h  writer.h
include/BDSP/streams/strategies/: types.h
include/BDSP/streams/strategies/abstract/: read.h  write.h
include/BDSP/streams/strategies/byte_stuffing/: mixins.h  read.h  types.h  write.h
include/BDSP/streams/strategies/cobs/: mixins.h  read.h  types.h  write.h
src/: BDSP.cpp  BDSP.h  CMakeLists.txt  COBS.h  COBSReader.cpp  COBSReader.h  COBSWriter.cpp  COBSWriter.h  Packet.cpp  Packet.h  bdsp.h  bdsp_mixins.cpp  bdsp_mixins.h  bdsp_receiver.cpp  bdsp_receiver.h  bdsp_transceiver.cpp  bdsp_transceiver.h  bdsp_transmitter.cpp  bdsp_transmitter.h  bdsp_types.h  crc.cpp  crc.h  main.cpp  mixins.cpp  packet.cpp  packet.h  receiver.cpp  transceiver.cpp  transmitter.cpp  utils.cpp  utils.h
src/checksums/: crc8.cpp
src/checksums/crc/: crc8.cpp
src/decoders/: COBS.cpp  PPP.cpp  PPP.h  abs_decoder.cpp  abs_decoder.h
src/encoders/: COBS.cpp  PPP.cpp  PPP.h  abs_encoder.cpp  abs_encoder.h  cobs.h  types.h
src/encoders/cobs/: cobs.h  config.h  configuration.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  reader.cpp  reader.h  writer.cpp  writer.h
src/strategies/abstract/: read.cpp  write.cpp
src/strategies/byte_stuffing/: mixins.cpp  read.cpp  write.cpp
src/strategies/cobs/: mixins.cpp  read.cpp  write.cpp
src/streams/: mixins.cpp  reader.cpp  writer.cpp
src/streams/COBS/: checkers.cpp  decoder.cpp  encoder.cpp  mixins.cpp  reader.cpp  writer.cpp
src/streams/PPP/: checkers.cpp  decoder.cpp  encoder.cpp  mixins.cpp  reader.cpp  writer.cpp
src/streams/abstract/: decoder.cpp  encoder.cpp  mixins.cpp  reader.cpp  stream.cpp  writer.cpp
src/streams/strategies/abstract/: read.cpp  write.cpp
src/streams/strategies/byte_stuffing/: mixins.cpp  read.cpp  write.cpp
src/streams/strategies/cobs/: mixins.cpp  read.cpp  write.cpp
src/сhecksums/: crc.cpp  crc.h
src/сhecksums/crc/: crc8.cpp  crc8.h
tests/: CMakeLists.txt  abs_decoder_tests.cpp  abs_encoder_and_decoder_tests.cpp  abs_encoder_tests.cpp  abstract_reader_tests.cpp  abstract_stream_tests.cpp  abstract_writer_tests.cpp  add_test.cpp  bdsp_other_tests.cpp  bdsp_tests.cpp  checksums.cpp  cobs_default_tests.cpp  cobs_sr_tests.cpp  cobs_tests.cpp  cobs_zpe_tests.cpp  crc8_test.cpp  ppp_tests.cpp
tests/BDSP/: bdsp_core_tests.cpp  bdsp_full_tests.cpp  bdsp_tests.cpp  integration_tests.cpp  mixins_tests.cpp  receiver_tests.cpp  transmitter_tests.cpp
tests/BDSP/strategies/abstract/: read_tests.cpp  write_tests.cpp
tests/BDSP/strategies/byte_stuffing/: mixins_tests.cpp  read_tests.cpp  write_tests.cpp
tests/BDSP/strategies/cobs/: default_tests.cpp  gse_tests.cpp  mixins_tests.cpp  redundancy_test.cpp  sr_tests.cpp  zpe_tests.cpp
tests/BDSP/streams/: abstract_reader_tests.cpp  abstract_stream_tests.cpp  abstract_writer_tests.cpp  cobs_default_tests.cpp  cobs_sr_tests.cpp  cobs_tests.cpp  cobs_zpe_tests.cpp  mixins_tests.cpp  ppp_tests.cpp  reader_tests.cpp  writer_tests.cpp
tests/BDSP/streams/COBS/: default_tests.cpp  integration_tests.cpp  mixins_tests.cpp  utils_tests.cpp
tests/BDSP/streams/PPP/: mixins_tests.cpp
tests/BDSP/streams/abstract/: mixins_tests.cpp  reader_tests.cpp  writer_tests.cpp
tests/BDSP/streams/ppp/: integration_tests.cpp
tests/BDSP/streams/strategies/abstract/: read_tests.cpp  write_tests.cpp
tests/BDSP/streams/strategies/byte_stuffing/: mixins_tests.cpp  read_tests.cpp  write_tests.cpp
tests/BDSP/streams/strategies/cobs/: default_tests.cpp  mixins_tests.cpp  sr_tests.cpp  zpe_tests.cpp
tests/utils/: cobs.cpp  cobs.h  show.cpp  show.h  testing.cpp  testing.h  vector_test_streams.cpp  vector_test_streams.h
