foreach (item PPP COBS COBS_SR BDSP)
    add_executable(BDSP-Desktop-${item} ${item}_EXAMPLE.cpp utils.cpp)
    target_sources(BDSP-Desktop-${item} PRIVATE ${sources})
    target_link_libraries(BDSP-Desktop-${item} PRIVATE BDSP::BDSP)
    if(NOT is_top_level)
        win_copy_deps_to_target_dir(BDSP-Desktop-${item} BDSP::BDSP)
    endif()
endforeach ()